--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -323,8 +323,8 @@ img {
 }
 
 /* ===== CONTACT =====*/
-.contact__input {
-  width: 100%;
+input[type="text"], input[type="email"], textarea {
+  width: 65%;
   font-size: var(--normal-font-size);
   font-weight: var(--font-semi);
   padding: 1rem;
@@ -333,14 +333,25 @@ img {
   outline: none;
   margin-bottom: var(--mb-4);
 }
-.contact__button {
-  display: block;
-  border: none;
-  outline: none;
-  font-size: var(--normal-font-size);
-  cursor: pointer;
-  margin-left: auto;
+
+textarea {
+  height: 200px;
 }
+
+/* Button styling */
+button[type="submit"] {
+  display: inline-block;
+  background-color: var(--first-color);
+  color: #fff;
+  padding: 0.75rem 2.5rem;
+  font-weight: var(--font-semi);
+  border-radius: 0.5rem;
+  transition: 0.3s;
+}
+.button:hover {
+  box-shadow: 0px 10px 36px rgba(0, 0, 0, 0.15);
+}
+
 
 /* ===== FOOTER =====*/
 .footer {
